trunk/Archive2/19/9aaf4bcf15f337/output
main.cpp:8:5: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
    cout << "My First C++ program" << endl;
    ^~~~
    std::cout
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iostream:61:18: note: 'std::cout' declared here
  extern ostream cout;          /// Linked to standard output
                 ^
main.cpp:8:39: error: use of undeclared identifier 'endl'; did you mean 'std::endl'?
    cout << "My First C++ program" << endl;
                                      ^~~~
                                      std::endl
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:564:5: note: 'std::endl' declared here
    endl(basic_ostream<_CharT, _Traits>& __os)
    ^
2 errors generated.
