trunk/Archive2/19/9aaf4bcf15f337/main.cpp
// listing 1.1: My first C++ program

#include <iostream>

int main()
{
    // Display a message on the screen
    cout << "My First C++ program" << endl;

return 0;
}